...
            height: CGFloat.greatestFiniteMagnitude
        )
        textView.textContainer?.widthTracksTextView = true

        textView.refusesFocus = isHiddenFromFocus
        scrollView.refusesFocus = isHiddenFromFocus
        textView.setAccessibilityIdentifier("note-editor")

        scrollView.documentView = textView
        scrollView.hasVerticalScroller = true
        scrollView.hasHorizontalScroller = false
        scrollView.autohidesScrollers = true
        scrollView.borderType = .noBorder
...
